--- a/js-practice/ex19.css
+++ b/js-practice/ex19.css
@@ -2,6 +2,9 @@
     text-align: center;
     margin-top: 100px;
 }
+#checkin:hover, #checkout:hover, #output:hover, #calculate:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
 #title{
     font-family: courier;
     letter-spacing: 30px;
